<resources>
    <string name="app_name">AndroidBaseApp</string>
    <string name="textview">textview</string>
    <string name="edittext">edittext</string>
    <string name="xingming">姓名</string>
    <string name="mima">密码</string>
    <string name="dianhua">电话</string>
    <string name="imageview">imageview</string>
    <string name="button">button</string>
    <string name="paomadeng">
        我是一个很长很长很长的一段话，用来演示跑马灯的效果，精彩内容请看下回分解
    </string>
    <string name="pipeitext">输入2个字符匹配</string>
    <string name="pipeitextmul">多次输入2个字符匹配</string>
    <string name="kai">开</string>
    <string name="guan">关</string>
    <string name="lanqiu">篮球</string>
    <string name="zuqiu">足球</string>
    <string name="paiqiu">排球</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="weizhi">未知</string>
    <string name="activity">activity</string>
    <string name="toast">toast</string>
    <string name="toastdefault">默认toast</string>
    <string name="toastdelong">长toast</string>
    <string name="toastposichange">改变toast位置</string>
    <string name="toastpicture">带图片的toast</string>
    <string name="toastzdy">自定义toast</string>
    <string name="dialog">Dialog</string>
    <string name="dialogqueren">确认dialog</string>
    <string name="dialogdanxuan">单选dialog</string>
    <string name="dialogduoxuan">多选dialog</string>
    <string name="dialogzdy">自定义dialog</string>
    <string name="dialogliebiao">列表dialog</string>
    <string name="queren">确认</string>
    <string name="notification">notify</string>
    <string name="send">发送</string>
    <string name="cancel">取消</string>
    <string name="contextmenu">contextmenu</string>
    <string name="fuzhi">复制</string>
    <string name="zhantie">粘贴</string>
    <string name="jianqie">剪切</string>
    <string name="contextmenuzdy">自定义conntextmenu</string>
    <string name="submenu">submenu</string>
    <string name="cunchu">存储</string>
    <string name="file">文件</string>
    <string name="contprovider">content provider</string>
    <string name="sqlite">原生SQLite</string>
    <string name="sharepreference">sharepreference</string>
    <string name="write">写入</string>
    <string name="raad">读取</string>
    <string name="jizhu">记住</string>
    <string name="denglu">登录</string>
    <string name="wangjimima">忘记密码?</string>
    <string name="zhuce">新用户注册</string>
    <string name="chuangjian">插入数据</string>
    <string name="duqushujuku">读取数据库</string>
    <string name="sqlitehelper">SQLite OpenHelper</string>
    <string name="chuangjianwenjian">创建文件</string>
    <string name="xieru">写入数据</string>
    <string name="duqu">读取</string>
    <string name="xieruduqu">写入并读取</string>
    <string name="xianshishuju">显示数据</string>
    <string name="guangbo">广播</string>
    <string name="putongguangbo">普通广播</string>
    <string name="youxuguangbo">有序广播</string>
    <string name="yibuguangbo">异步广播</string>
    <string name="service">service</string>
    <string name="xitongfuwu">系统服务</string>
    <string name="network">判断网络是否连接</string>
    <string name="wifi">打开/关闭Wifi</string>
    <string name="voice">获取系统音量</string>
    <string name="packagename">获取程序包名</string>
    <string name="startservice">start service</string>
    <string name="bindservice">bind service</string>
    <string name="kaishi">开始</string>
    <string name="jieshu">结束</string>
    <string name="play">play</string>
    <string name="bofang">播放</string>
    <string name="shangyiqu">上一首</string>
    <string name="xiayishou">下一首</string>
    <string name="zanting">暂停</string>
    <string name="fuwu">服务</string>
    <string name="shoushi">手势</string>
    <string name="shoushiuadong">手势滑动</string>
    <string name="suolong">索隆</string>
    <string name="cehuamenu">侧滑菜单</string>
    <string name="amazon">amazon</string>
    <string name="caidan">菜单</string>
    <string name="listview">listview</string>
    <string name="nianling">年龄</string>
    <string name="xignbie">性别</string>
    <string name="aihao">爱好</string>
</resources>
