<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/toast1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toastdefault"/>

    <Button
        android:id="@+id/toast2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toastdelong"/>

    <Button
        android:id="@+id/toast3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toastposichange"/>

    <Button
        android:id="@+id/toast4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toastpicture"/>

    <Button
        android:id="@+id/toast5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toastzdy"/>

</LinearLayout>