<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/datashare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sharepreference" />

    <Button
        android:id="@+id/datasqlite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sqlite" />

    <Button
        android:id="@+id/datasqlitehelper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sqlitehelper" />

    <Button
        android:id="@+id/datacontentp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contprovider" />

    <Button
        android:id="@+id/datafile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file" />
</LinearLayout>