<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xitongfuwu"
        android:gravity="center"
        android:padding="10dp"/>

    <Button
        android:id="@+id/network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network" />

    <Button
        android:id="@+id/wifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wifi" />

    <Button
        android:id="@+id/voice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voice" />

    <Button
        android:id="@+id/packagename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/packagename" />

</LinearLayout>