<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guangbo"
        android:gravity="center"
        android:padding="10dp"/>

    <Button
        android:id="@+id/guangboputong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/putongguangbo" />

    <Button
        android:id="@+id/guangboyouxu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youxuguangbo" />

    <Button
        android:id="@+id/guangboyibu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yibuguangbo" />
</LinearLayout>