<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/sharewrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write" />

    <Button
        android:id="@+id/shareread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/raad" />

    <TextView
        android:id="@+id/sharetextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xingming"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mima"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/sharecheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jizhu"
        android:padding="10dp"
        android:layout_marginStart="5dp"/>

    <Button
        android:id="@+id/sharedenglu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/denglu"
        android:background="@color/colorgray"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wangjimima"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhuce"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>
</LinearLayout>