<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/xingming"/>

    <EditText
        android:id="@+id/edit_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mima"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edit_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dianhua"
        android:inputType="phone"/>

</LinearLayout>