<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contprovider"
        android:gravity="center"
        android:padding="10dp"/>

    <Button
        android:id="@+id/contentproread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duqu" />

    <Button
        android:id="@+id/contentprowrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xieru" />
</LinearLayout>