<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.scu.xing.androidbaseapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/btn_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:layout_weight="1"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edittext"
            android:layout_weight="1"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imageview"
            android:layout_weight="1"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:layout_weight="1"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/btn_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity"
            android:layout_weight="1"
            android:textAllCaps="false"/>


    </LinearLayout>


</LinearLayout>
