<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.scu.xing.androidbaseapp.marquee.MarqueeText
        android:id="@+id/tv_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paomadeng"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:singleLine="true"
        android:focusable="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:ellipsize="marquee"
        android:focusableInTouchMode="true"/>

    <com.scu.xing.androidbaseapp.marquee.MarqueeText
        android:id="@+id/tv_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paomadeng"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:singleLine="true"
        android:focusable="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:ellipsize="marquee"
        android:focusableInTouchMode="true"/>

    <AutoCompleteTextView
        android:id="@+id/actv_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pipeitext"
        android:completionThreshold="2"/>

    <MultiAutoCompleteTextView
        android:id="@+id/mactv_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pipeitextmul"
        android:completionThreshold="2"/>

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:autoLink="all"
        android:textSize="20sp" />

</LinearLayout>