<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center|left"
    tools:ignore="RtlHardcoded">

    <ImageView
        android:id="@+id/image_photo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="" />

    <TextView
        android:id="@+id/textview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xingming"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/textview_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nianling"
            android:textStyle="italic"
            android:textColor="@color/colorgray"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textview_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xignbie"
            android:textStyle="italic"
            android:textColor="@color/colorblue"
            android:textSize="16sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textview_hobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aihao"
        android:textSize="16sp"/>

</LinearLayout>